# consistent-penetrations

./: A.mesh  B.mesh  CMakeLists.txt  DR.dmat  README.md  consistent_penetrations.h  example.cpp
